GNOME Bugzilla – Bug 766207
Fix build on pre-C99 compilers
Last modified: 2016-05-10 09:18:02 UTC
Created attachment 327564 [details] [review] Add fallbacks for exp2(), log2(), and INFINITY when necessary Hi, Recently, libgtk made use of C99 math functions and macros like INFINITY, exp2() and log2(), which is not supported universally. This attempts to add checks for these functions during configure and provide fallbacks for them and INFINITY. With blessings, thank you!
Review of attachment 327564 [details] [review]: We already have all the fallback infrastructure in place, so sure, this looks good
Hi Paolo, Thanks for the fast review, I have pushed the patch as 092cb9e2. With blessings, thank you!